@@ -54,11 +54,6 @@ cmp_deeply(
     errors => [
       {
         instanceLocation => '',
-        keywordLocation => '/required',
-        error => 'missing property: bar',
-      },
-      {
-        instanceLocation => '',
         keywordLocation => '/allOf/0/type',
         error => 'wrong type (expected number)',
       },
@@ -212,6 +207,11 @@ cmp_deeply(
         keywordLocation => '/propertyNames',
         error => 'not all property names are valid',
       },
+      {
+        instanceLocation => '',
+        keywordLocation => '/required',
+        error => 'missing property: bar',
+      },
     ],
   },
   'basic format includes all errors linearly',
@@ -232,11 +232,6 @@ cmp_deeply(
   {
     valid => false,
     errors => [
-      {
-        instanceLocation => '',
-        keywordLocation => '/required',
-        error => 'missing property: bar',
-      },
       {
         instanceLocation => '',
         keywordLocation => '/allOf/0/type',
@@ -331,6 +326,11 @@ cmp_deeply(
         error => 'pattern does not match',
       },
       # - "summary" error from /propertyNames is omitted
+      {
+        instanceLocation => '',
+        keywordLocation => '/required',
+        error => 'missing property: bar',
+      },
     ],
   },
   'terse format omits errors from redundant applicator keywords',
