@@ -4,6 +4,9 @@ Revision history for JSON-Schema-Draft201909
           - fixed error strings used for failing "dependentRequired"
           - in terse output format, do not discard non-summary errors from
             schema-form of items
+          - keywords in the applicator vocabulary are now applied before the
+            keywords in the validation vocabulary (true/false results are not
+            affected, but the order of annotations and errors will change)
 
 0.026     2021-04-08 20:13:27Z
           - fix scoping of annotations from uncle keywords (siblings of the
